# cortex2d

./: .gitignore  Android.mk  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindFreeType.cmake  FindPNG12.cmake  FindSDL2.cmake
include/: Cortex2D  FlApplication  FlCallback  FlDragCursor  FlEasingCurve  FlGL  FlList  FlMap  FlMath  FlMatrix  FlMouseEvent  FlRect  FlSceneItem  FlSceneView  FlShaderEffect  FlShaderProgram  FlShaderUniform  FlSoundMixer  FlSoundSample  FlTexture  FlVector  FlWindow  include.pri
sdlpatches/: SDL_rwops_android_resource.patch
src/: cortex2d.h  ctGL.h  ctanimations.cpp  ctanimations.h  ctapplication.cpp  ctapplication.h  ctapplication_ios.mm  ctapplication_ios_p.h  ctapplication_p.cpp  ctapplication_p.h  ctapplication_sdl.cpp  ctapplication_sdl_p.h  ctbasicapplication.h  ctbuffer.cpp  ctbuffer.h  ctcolor.h  ctdragcursor.h  cteasingcurve.cpp  cteasingcurve.h  ctevents.cpp  ctevents.h  ctfile.cpp  ctfont.cpp  ctfont.h  ctfont_p.h  ctfontmanager.cpp  ctfontmanager.h  ctfontmanager_p.h  ctfunctor.h  ctglobal.h  ctitem.cpp  ctitem.h  ctitem_p.h  ctlist.h  ctmap.h  ctmath.h  ctmatrix.cpp  ctmatrix.h  ctobject.cpp  ctobject.h  (+77 more)
src/audio/: audio.pri  ctsoundmixer.cpp  ctsoundmixer.h  ctsoundmixer_openal.cpp  ctsoundmixer_p.h  ctsoundmixer_sdl.cpp  ctsoundsample.cpp  ctsoundsample.h  ctsoundsample_openal.cpp  ctsoundsample_p.h  ctsoundsample_sdl.cpp  flsoundmixer.cpp  flsoundmixer.h  flsoundmixer_p.h  flsoundmixer_sdl.cpp  flsoundmixer_sdl_p.h  flsoundsample.cpp  flsoundsample.h  flsoundsample_p.h  flsoundsample_sdl.cpp  flsoundsample_sdl_p.h
src/audio/openal/: ctsoundmixer_openal_p.h  ctsoundsample_openal_p.h
src/audio/sdl/: ctsoundmixer_sdl_p.h  ctsoundsample_sdl.cpp  ctsoundsample_sdl_p.h
src/filesystem/: ctfilemanager.h  ctfilemanager_ios.mm  ctfilemanager_sdl.cpp  filesystem.pri
src/ios/: ctiosappdelegate.h  ctiosappdelegate.mm  ctiosfunctions.h  ctiosglview.h  ctiosglview.mm  ctiosscheduler.h  ctiosscheduler.mm  ctiosviewcontroller.h  ctiosviewcontroller.mm  ctioswindow.h  ctioswindow.mm
src/utils/: bmfontparser.c  bmfontparser.h  ctbuffer.cpp  ctbuffer.h  ctddsloader.cpp  ctddsloader.h  ctfile.cpp  ctfile.h  ctpngloader.cpp  ctpngloader.h  ctpngloader_ios.mm  ctpvrloader.cpp  ctpvrloader.h  cttgaloader.cpp  cttgaloader.h  flbuffer.cpp  flbuffer.h  flddsloader.cpp  flddsloader.h  flfile.cpp  flfile.h  flpvrloader.cpp  flpvrloader.h  fltgaloader.cpp  fltgaloader.h
tests/: tests.pri  tests.pro
tests/audio/: main.cpp
tests/fragments/: blocks.atlas  blocks.atlas.tga  main.cpp
tests/framebuffer/: main.cpp  trash.tga  umbrella.tga
tests/items/: flag.tga  main.cpp
tests/ortho/: image.tga  main.cpp  ortho.pro
tests/particles/: main.cpp
tests/polygons/: main.cpp
tests/quad/: main.cpp
tests/sprite/: button.cpp  button.h  frameitem.cpp  frameitem.h  main.cpp  player.cpp  player.h  sprite  sprite.pro
tests/sprite/images/: default.atlas
tests/textitems/: bubblegum_sans_regular_22.fnt  bubblegum_sans_regular_22.tga  main.cpp
tools/: cortex2d-atlasgen  cortex2d-binpack  fluidbinpack  fluidtexpack
